--- a/css1/style.css
+++ b/css1/style.css
@@ -1,6 +1,6 @@
 .sub{position:relative;width: 300px;margin-top:0;display: flex;flex-direction: column;align-items: center;justify-content: center;border: 2px solid #000;}
-.sub-btn,.sub-button{width: 30px;height: 30px;border:none; border-radius: 50%;display:grid;place-content: center;outline:0;padding:0;vertical-align:center;overflow:hidden;text-decoration:none;
-	color:#FFF;background-color:#000;border: 2px solid #000;text-align:right;cursor:pointer;white-space:nowrap}
+.sub-btn,.sub-button{width: 25px;height: 25px;border:none; border-radius: 50%;display:grid;place-content: center;outline:0;padding:0;vertical-align:center;overflow:hidden;text-decoration:none;
+	cursor:pointer;background: none;}
 .sub-btn,.sub-button{-webkit-touch-callout:none;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-ms-user-select:none;
 	user-select:none} 
 .sub-disabled,.sub-btn:disabled,.sub-button:disabled{cursor:not-allowed;opacity:0.3}.sub-disabled *,:disabled *{pointer-events:none}
@@ -24,6 +24,7 @@ position: absolute;
 	object-fit: cover !important;
 	object-position: 50% 50%;
 }
+
 .mySlides{
 	width:300px;
 	height:auto;
@@ -41,6 +42,6 @@ position: absolute;
 	display: flex;
 	flex-direction: row;
 	align-items: flex-start;
-	justify-content:  flex-start;
+	justify-content:  flex-start !important;
 	overflow: hidden;
 }
