--- a/css1/style.css
+++ b/css1/style.css
@@ -1,4 +1,4 @@
-.sub{position:relative;width: 300px;margin-top:0;display: flex;flex-direction: column;align-items: center;justify-content: center;border: 2px solid #000;}
+.sub{position: relative;width: 300px;margin-top:0;display: flex;flex-direction: column;align-items: center;justify-content: center;border: 2px solid #000;}
 .sub-btn,.sub-button{width: 25px;height: 25px;border:none; border-radius: 50%;display:grid;place-content: center;outline:0;padding:0;vertical-align:center;overflow:hidden;text-decoration:none;
 	cursor:pointer;background: none;}
 .sub-btn,.sub-button{-webkit-touch-callout:none;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-ms-user-select:none;
@@ -7,11 +7,10 @@
 .sub-bar-block .sub-dropdown-hover .sub-button,.sub-bar-block .sub-dropdown-click .sub-button{width:100%;text-align:right;padding:8px 16px}
 p.solid {border-style: solid;}
 
-
-
 .sub-content button {
 position: absolute;
 }
+
 
 .sub-display-center{
 	padding-top:5px ;
@@ -30,10 +29,20 @@ position: absolute;
 	height:auto;
 	object-fit: contain;
 	object-position: center;
+	transform: translateX(-600px);
 }
 
 .sub-display-right {position: absolute;right:1rem; top:1rem;}
 .sub-display-left {position: absolute;left:1rem; top: 1rem;}
+
+#wrapper{
+	position: relative;
+	width: 300px;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+}
 
 .images{
 	position: relative;
@@ -42,6 +51,18 @@ position: absolute;
 	display: flex;
 	flex-direction: row;
 	align-items: flex-start;
-	justify-content:  flex-start !important;
+	justify-content:  center;
 	overflow: hidden;
 }
+
+#scroller{
+	position: relative;
+	width: 300px;
+	height: auto;
+	display: flex;
+	flex-direction: row;
+	align-items: flex-start;
+	justify-content: flex-start;
+	overflow: scroll;
+}
+
